[gd_scene load_steps=20 format=2]

[ext_resource path="res://art/card_back.png" type="Texture" id=1]
[ext_resource path="res://art/draw_card.png" type="Texture" id=2]
[ext_resource path="res://UI/CardBackTexture.gd" type="Script" id=3]
[ext_resource path="res://UI/GameOverlay.gd" type="Script" id=4]
[ext_resource path="res://art/progress_placeholder.png" type="Texture" id=5]
[ext_resource path="res://art/progress_background_placeholder-export.png" type="Texture" id=6]
[ext_resource path="res://art/progress_overlay_placeholder.png" type="Texture" id=7]
[ext_resource path="res://art/ship_placeholder.png" type="Texture" id=8]
[ext_resource path="res://art/placeholder_background.png" type="Texture" id=9]
[ext_resource path="res://UI/LevelProgress.gd" type="Script" id=10]
[ext_resource path="res://UI/UI_theme.tres" type="Theme" id=11]
[ext_resource path="res://resources/LSANS_dynamic_font_massive.tres" type="DynamicFont" id=12]
[ext_resource path="res://art/time_progress_placeholder.png" type="Texture" id=13]
[ext_resource path="res://UI/TurnTimer.gd" type="Script" id=14]
[ext_resource path="res://UI/IncomingAnnouncement.gd" type="Script" id=15]

[sub_resource type="Animation" id=1]
resource_name = "draw_card"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 141, 441 ), Vector2( 212, 529 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 0.364706 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.580392, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.25098, 0, 0.509804, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=4]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 850, 45 ), Vector2( 860, 45 ), Vector2( 840, 45 ), Vector2( 850, 45 ), Vector2( 840, 45 ) ]
}

[node name="GameOverlay" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
texture = ExtResource( 9 )

[node name="CardBackTexture" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 158.278
margin_top = 493.567
margin_right = 408.279
margin_bottom = 843.569
rect_rotation = -218.4
rect_scale = Vector2( 0.3, 0.3 )
mouse_filter = 2
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CardBackTexture"]
anims/draw_card = SubResource( 1 )

[node name="Timer" type="Timer" parent="CardBackTexture"]
wait_time = 1.25
one_shot = true

[node name="DeckTexture" type="TextureRect" parent="."]
margin_left = 87.2778
margin_top = 405.567
margin_right = 337.278
margin_bottom = 837.567
rect_rotation = -218.4
rect_scale = Vector2( 0.3, 0.3 )
mouse_filter = 2
texture = ExtResource( 2 )

[node name="LevelProgress" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 10 )

[node name="ProgressTween" type="Tween" parent="LevelProgress"]

[node name="ProgressTexture" type="TextureProgress" parent="LevelProgress"]
margin_right = 1024.0
margin_bottom = 40.0
mouse_filter = 2
max_value = 1200.0
rounded = true
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 5 )

[node name="Timer" type="Timer" parent="LevelProgress"]
wait_time = 120.0
one_shot = true

[node name="ShipTexture" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 45.0
margin_right = 1000.0
margin_bottom = 430.0
mouse_filter = 2
texture = ExtResource( 8 )

[node name="DeleteMeAfterTesting" type="Label" parent="."]
margin_left = 441.0
margin_top = 171.0
margin_right = 677.0
margin_bottom = 268.0
theme = ExtResource( 11 )

[node name="IncomingAnnouncement" type="MarginContainer" parent="."]
visible = false
margin_top = 159.0
margin_right = 1024.0
margin_bottom = 245.0
mouse_filter = 2
theme = ExtResource( 11 )
script = ExtResource( 15 )
__meta__ = {
"_editor_description_": "Display when the turn changes to the player's turn."
}

[node name="PanelContainer" type="PanelContainer" parent="IncomingAnnouncement"]
margin_right = 1024.0
margin_bottom = 86.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="IncomingAnnouncement/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 94.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="IncomingAnnouncement/PanelContainer/MarginContainer"]
margin_right = 1008.0
margin_bottom = 86.0
mouse_filter = 2

[node name="IncomingLabel" type="Label" parent="IncomingAnnouncement/PanelContainer/MarginContainer/CenterContainer"]
margin_left = 308.0
margin_right = 699.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 12 )
text = "INCOMING!"
align = 1
valign = 1

[node name="DisplayTimer" type="Timer" parent="IncomingAnnouncement"]
wait_time = 1.5
one_shot = true

[node name="TurnTimer" type="MarginContainer" parent="."]
margin_left = 850.0
margin_top = 45.0
margin_right = 958.0
margin_bottom = 153.001
theme = ExtResource( 11 )
script = ExtResource( 14 )

[node name="PanelContainer" type="PanelContainer" parent="TurnTimer"]
margin_right = 108.0
margin_bottom = 108.0
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="TurnTimer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 106.0
margin_bottom = 106.0

[node name="CenterContainer" type="CenterContainer" parent="TurnTimer/PanelContainer/MarginContainer"]
margin_right = 104.0
margin_bottom = 104.0

[node name="TextureProgress" type="TextureProgress" parent="TurnTimer/PanelContainer/MarginContainer/CenterContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 102.0
margin_bottom = 102.0
max_value = 60.0
rounded = true
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 13 )
fill_mode = 4
tint_under = Color( 0.709804, 0.156863, 1, 0.227451 )
tint_progress = Color( 1, 0, 0, 1 )

[node name="Timer" type="Timer" parent="TurnTimer"]
wait_time = 6.0
one_shot = true

[node name="TimerTween" type="Tween" parent="TurnTimer"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="TurnTimer"]
anims/shake = SubResource( 4 )

[connection signal="timeout" from="CardBackTexture/Timer" to="CardBackTexture" method="_on_Timer_timeout"]
[connection signal="value_changed" from="LevelProgress/ProgressTexture" to="LevelProgress" method="_on_ProgressTexture_value_changed"]
[connection signal="incoming" from="IncomingAnnouncement" to="." method="_on_IncomingAnnouncement_incoming"]
[connection signal="timeout" from="IncomingAnnouncement/DisplayTimer" to="IncomingAnnouncement" method="_on_Timer_timeout"]
[connection signal="player_time_out" from="TurnTimer" to="IncomingAnnouncement" method="_on_TurnTimer_player_time_out"]
[connection signal="timeout" from="TurnTimer/Timer" to="TurnTimer" method="_on_Timer_timeout"]
